Add DebitCard Create view. Remove DebitCard Index view. Create DebitCard ViewAllCustomersCards view. Fix NavBar link.

--- a/CycletexBikesMvc/Views/DebitCard/ViewAllCustomersCards.cshtml
+++ b/CycletexBikesMvc/Views/DebitCard/ViewAllCustomersCards.cshtml
@@ -1,19 +1,16 @@
 ﻿@model IEnumerable<CycletexBikesMvc.Models.DebitCard>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Your Cards";
 }
 
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", "DebitCard")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Customer.Name)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.CardHolderName)
         </th>
@@ -31,9 +28,6 @@
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Customer.Name)
-        </td>
         <td>
             @Html.DisplayFor(modelItem => item.CardHolderName)
         </td>
