--- a/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
@@ -26,7 +26,7 @@
                         </li>
 
                         <li class="nav-item nav-link">
-                            @Html.ActionLink("Manage Debit Cards", "Index", "DebitCard", new { id = User.Identity.GetUserId() }, new { @class = "nav-link" })
+                            @Html.ActionLink("Manage Debit Cards", "ViewAllCustomersCards", "DebitCard", new { id = User.Identity.GetUserId() }, new { @class = "nav-link" })
                         </li>
                     }
 
