Abb PaymentController, CreateBookingViewModel.

--- a/CycletexBikesMvc/Views/Booking/Create.cshtml
+++ b/CycletexBikesMvc/Views/Booking/Create.cshtml
@@ -24,7 +24,7 @@
             {
                 @Html.AntiForgeryToken()
 
-                <div class="form-horizontal bg-light">
+                <div class="form-horizontal">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
