--- a/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
@@ -39,9 +39,6 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.DebitCard.CardNumber)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Date)
         </td>
         <td>
@@ -58,8 +55,9 @@
         </td>
         <td>
             @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
+        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+        @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
+            @Html.ActionLink("Pay Now", "MakePayment", "Payment")
         </td>
     </tr>
 }
