--- a/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
@@ -1,8 +1,13 @@
-﻿@model IEnumerable<CycletexBikesMvc.Models.Booking>
+﻿<!--name: Ross McLean-->
+<!--date: 15/05/20-->
+
+@model IEnumerable<CycletexBikesMvc.Models.Booking>
 
 @{
     ViewBag.Title = "Your Bookings";
 }
+
+@using Microsoft.AspNet.Identity;
 
 <h2>Your Bookings</h2>
 
@@ -15,9 +20,6 @@
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.DebitCard.CardNumber)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.Date)
         </th>
@@ -36,30 +38,31 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BikeId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CheckInDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CheckOutDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Total)
-        </td>
-        <td>
-            @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
-            @Html.ActionLink("Pay Now", "MakePayment", "Payment")
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BikeId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CheckInDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CheckOutDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Total)
+            </td>
+            <td>
+                @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
+                @Html.ActionLink("Pay Now", "MakePayment", "Payment", new { userId = User.Identity.GetUserId(), bookingId = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
