Implement MakePayment Post action.

--- a/CycletexBikesMvc/Views/Booking/ViewAllBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllBookings.cshtml
@@ -19,10 +19,10 @@
             @Html.DisplayNameFor(model => model.Customer.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DebitCard.CardNumber)
+            @Html.DisplayNameFor(model => model.Date)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Date)
+            @Html.DisplayNameFor(model => model.IsPaid)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.BikeId)
@@ -46,10 +46,10 @@
                 @Html.DisplayFor(modelItem => item.Customer.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DebitCard.CardNumber)
+                @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Date)
+                @Html.DisplayFor(modelItem => item.IsPaid)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BikeId)
