--- a/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
@@ -24,6 +24,9 @@
             @Html.DisplayNameFor(model => model.Date)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.IsPaid)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.BikeId)
         </th>
         <th>
@@ -40,29 +43,32 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BikeId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CheckInDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CheckOutDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Total)
-            </td>
-            <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
-                @Html.ActionLink("Pay Now", "MakePayment", "Payment", new { userId = User.Identity.GetUserId(), bookingId = item.Id })
-            </td>
-        </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Date)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.IsPaid)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.BikeId)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CheckInDate)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CheckOutDate)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Total)
+    </td>
+    <td>
+        @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
+        @Html.ActionLink("Pay Now", "MakePayment", "Payment", new { userId = User.Identity.GetUserId(), bookingId = item.Id }, null)
+    </td>
+</tr>
     }
 
 </table>
