--- a/CycletexBikesMvc/Views/Payment/MakePayment.cshtml
+++ b/CycletexBikesMvc/Views/Payment/MakePayment.cshtml
@@ -3,7 +3,7 @@
 
 @model CycletexBikesMvc.ViewModels.MakePaymentViewModel
 @{ViewBag.Title = "MakePayment";}
-
+@using Microsoft.AspNet.Identity;
 <br />
 <h1>Make Payment</h1>
 <br />
@@ -31,28 +31,23 @@
                 </div>
             </div>
 
-            @*<div class="form-group">
-                @Html.LabelFor(model => model.SelectedDebitCardId, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.SelectedDebitCardId, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.SelectedDebitCardId, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
-            @* Display total cost here *@
             <div class="form-group">
-                @Html.LabelFor(model => model.Total, htmlAttributes: new { @class = "control-label col-md-2" })
+                <p>Booking ID: @Model.BookingId.ToString()</p>
+            </div>
+
+            <div class="form-group">
+                <p>Total: £@Model.Total.ToString()</p>
             </div>
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Pay" class="btn btn-default" />
                 </div>
             </div>
         </div>
         }
     </div>
-</div> 
+</div>
 <div>
-    @Html.ActionLink("Cancel", "Index") @*complete*@
+    @Html.ActionLink("Cancel", "ViewAllCustomersBookings", "Booking", new { id = User.Identity.GetUserId() }, null)
 </div>
