--- a/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
@@ -26,6 +26,10 @@
                         </li>
 
                         <li class="nav-item nav-link">
+                            @Html.ActionLink("My Bookings", "ViewAllCustomersBookings", "Booking", new { id = User.Identity.GetUserId() }, new { @class = "nav-link" })
+                        </li>
+
+                        <li class="nav-item nav-link">
                             @Html.ActionLink("Manage Debit Cards", "ViewAllCustomersCards", "DebitCard", new { id = User.Identity.GetUserId() }, new { @class = "nav-link" })
                         </li>
                     }
