--- a/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_NavBar.cshtml
@@ -26,7 +26,7 @@
                         </li>
 
                         <li class="nav-item nav-link">
-                            @Html.ActionLink("My Bookings", "ViewAllCustomersBookings", "Booking", new { id = User.Identity.GetUserId() }, new { @class = "nav-link" })
+                            @Html.ActionLink("Manage Bookings", "ViewAllCustomersBookings", "Booking", new { id = User.Identity.GetUserId() }, new { @class = "nav-link" })
                         </li>
 
                         <li class="nav-item nav-link">
