--- a/CycletexBikesMvc/Views/Booking/ViewAllBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllBookings.cshtml
@@ -13,6 +13,10 @@
 @Html.Partial("_Notifications")
 <hr />
 
+<p>
+    @Html.ActionLink("Print", "AllBookingsToPdf")
+</p>
+
 <table class="table">
     <tr>
         <th>
