--- a/CycletexBikesMvc/Views/Payment/Details.cshtml
+++ b/CycletexBikesMvc/Views/Payment/Details.cshtml
@@ -42,5 +42,5 @@
     </div>
 </div>
 <p>
-    @Html.ActionLink("Back to Bookings", "ViewAllCustomersBookings", "Booking", new { id = User.Identity.GetUserId() })
+    @Html.ActionLink("Back to Bookings", "ViewAllCustomersBookings", "Booking", new { id = User.Identity.GetUserId() }) |
 </p>
