--- a/CycletexBikesMvc/Views/DebitCard/ViewAllCustomersCards.cshtml
+++ b/CycletexBikesMvc/Views/DebitCard/ViewAllCustomersCards.cshtml
@@ -44,10 +44,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ExpiryDate)
             </td>
-            <td>
+            @* Unused *@
+            @*<td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
+            </td>*@
         </tr>
     }
 </table>
