--- a/CycletexBikesMvc/Views/Home/Index.cshtml
+++ b/CycletexBikesMvc/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿<!--name: Ross McLean-->
+<!--date: 17/05/20-->
+
+@{ViewBag.Title = "Home Page";}
 
 <!-- Masthead -->
 @Html.Partial("_MastHead")
