--- a/CycletexBikesMvc/Views/Shared/_MastHead.cshtml
+++ b/CycletexBikesMvc/Views/Shared/_MastHead.cshtml
@@ -1,4 +1,8 @@
-﻿<header class="masthead text-white text-center">
+﻿<!--name: Ross McLean-->
+<!--date: 17/05/20-->
+
+@* Loads the mastHead (big picture on the Index page) *@
+<header class="masthead text-white text-center">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
