Add Twilio comments. Fix hard-coded phone number bug.

--- a/CycletexBikesMvc/Views/Payment/Details.cshtml
+++ b/CycletexBikesMvc/Views/Payment/Details.cshtml
@@ -40,5 +40,5 @@
     </div>
 </div>
 <p>
-    @Html.ActionLink("Back to Bookings", "ViewAllCustomersBookings", "Booking", new { id = User.Identity.GetUserId() }) |
+    @Html.ActionLink("Back to Bookings", "ViewAllCustomersBookings", "Booking", new { id = User.Identity.GetUserId() }, null) |
 </p>
