--- a/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
+++ b/CycletexBikesMvc/Views/Booking/ViewAllCustomersBookings.cshtml
@@ -11,7 +11,7 @@
 @Html.Partial("_Notifications")
 <hr />
 <p>
-    @Html.ActionLink("Create New", "Create", "Booking")
+    @Html.ActionLink("Create New", "Create", "Booking", new { id = User.Identity.GetUserId() })
 </p>
 <table class="table">
     <tr>
